--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "apis": "json-server server.json -w"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.5",
     "lucide-react": "^0.429.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,11 +32,13 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "json-server": "1.0.0-beta.2",
     "postcss": "^8.4.41",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "^2.0.5"
   }
 }
